# themeshproject

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mesh_tools.sln  themeshproject.sln
LEGAL/: COMMERCIAL-LICENSE.md  COPYRIGHT  LICENSE.md  NOTICE
app_core/: app_core.cpp  app_core.h  app_core.vcxproj  app_core.vcxproj.filters  common_dialogs.cpp  common_dialogs.h  core_application.cpp  core_application.h  gl_window.cpp  gl_window.h
base_app/: base_app.cpp  base_app.h  base_app.vcxproj  base_app.vcxproj.filters  common_dialogs.h
base_math/: algebra.h  base_definitions.h  cube.h  geometry.h  he_mesh.h  he_mesh__.h  math.vcxproj  math.vcxproj.filters  matrix.h  mesh.h  mesh_curvature.h  model.h  predefined_meshes.cpp  quaternion.h  vector.h
base_opengl/: base_opengl.vcxproj  base_opengl.vcxproj.filters  gl_camera.cpp  gl_camera.h  gl_graphics.h  gl_light.h  gl_material.h  gl_math.cpp  gl_mesh.cpp  gl_mesh.h  gl_prim.cpp  gl_prim.h  gl_shaders.cpp  gl_shaders.h  gl_timer.h  glew.c  glew.h  wglew.h
commons/: commons.vcxproj  commons.vcxproj.filters  string_utils.h
gl_core/: gl_camera.h  gl_core.vcxproj  gl_font.cpp  gl_font.h  gl_graphics.h  gl_math.h  gl_mesh.h  gl_prim.h  gl_shaders.h  gl_timer.cpp
graphics_test/: Resource.h  arcball.h  framework.h  graphics_test.cpp  graphics_test.h  graphics_test.rc  graphics_test.vcxproj  graphics_test.vcxproj.filters
include/: framework.h  resource.h  themeshframe.h  themeshmodel.h  themeshview.h  visual_objects.h
math_core/: algebra.h  geometry.h  math_core.vcxproj  math_core.vcxproj.filters  matrix.h  mesh.h  mesh_curvature.h  nurbs_core.h  vector.h
math_test/: math_test.cpp  math_test.vcxproj  math_test.vcxproj.filters  matrix_tests.cpp  mesh_test.cpp  vector_tests.cpp
mesh_tools/: arcball.h  curvature.cpp  curvature_save.cpp  curvature_temp.cpp  mesh_tools.aps  mesh_tools.cpp  mesh_tools.h  mesh_tools.rc  mesh_tools.vcxproj  mesh_tools.vcxproj.filters  mesh_view.cpp  mesh_view.h  model.cpp  model.h  mt_curvature.cpp  resource.h  visual_objects.cpp  visual_objects.h
obj_to_mesh/: obj_to_mesh.cpp  obj_to_mesh.vcxproj  obj_to_mesh.vcxproj.filters
projects/: CMakeLists.txt
projects/mesh_data_structures/: CMakeLists.txt  main.cpp
runtime/resources/models/: asteroid.blend  fine_knot.blend  knot_01.blend  knot_01.blend1  nurbs_surf.blend  nurbs_surf.blend1  nurbs_surf2.blend  sample1.blend  sample_nurbs_01.blend  sample_nurbs_01.blend1  two nurbs.blend  two nurbs.blend1  unit_cone.prim  unit_cube.prim  unit_cylinder.prim  unit_dodecahedron.prim  unit_icosahedron.prim  unit_octa.prim  unit_penta.prim  unit_plane.prim  unit_sphere.prim  unit_tetra.prim  unit_torus.prim
runtime/resources/shaders/: generic_FragmentShader.glsl  generic_VertexShader.glsl  mesh_tools_FragmentShader.glsl  mesh_tools_VertexShader.glsl
src/: curvature.cpp  meshproject.cpp  themeshframe.cpp  themeshmodel.cpp  themeshproject.aps  themeshproject.cpp  themeshproject.rc  themeshview.cpp  visual_objects.cpp
surface_gen/: surface_gen.cpp  surface_gen.vcxproj  surface_gen.vcxproj.filters
themeshproject/: arcball.h  curvature.cpp  framework.h  resource.h  themeshframe.h  themeshmodel.cpp  themeshmodel.h  themeshproject.aps  themeshproject.cpp  themeshproject.rc  themeshproject.vcxproj  themeshproject.vcxproj.filters  themeshview.cpp  themeshview.h  visual_objects.cpp
